--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
-    "localstorage": "^1.0.1",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.11",
-    "node-persist": "^3.0.0",
+    "node-localstorage": "^1.3.1",
     "urlencoded-parser": "^1.0.0"
   },
   "devDependencies": {
